@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: cerebro_event_updown.c,v 1.1.2.1 2006-10-17 06:42:13 chu11 Exp $
+ *  $Id: cerebro_event_updown.c,v 1.1.2.2 2006-10-24 05:23:00 chu11 Exp $
  *****************************************************************************
  *  Copyright (C) 2005 The Regents of the University of California.
  *  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
@@ -46,10 +46,28 @@
 #include "hash.h"
 #include "list.h"
 
-#define UPDOWN_EVENT_MODULE_NAME    "updown"
-#define UPDOWN_EVENT_METRIC_NAMES   "boottime"
-#define UPDOWN_EVENT_TIMEOUT_LENGTH 60
-#define UPDOWN_HASH_SIZE            1024
+#define UPDOWN_EVENT_MODULE_NAME     "updown"
+#define UPDOWN_EVENT_METRIC_NAMES    "boottime"
+#define UPDOWN_EVENT_TIMEOUT_LENGTH  60
+#define UPDOWN_HASH_SIZE             1024
+
+#define UPDOWN_EVENT_STATE_INIT     -1
+#define UPDOWN_EVENT_STATE_DOWN      0
+#define UPDOWN_EVENT_STATE_UP        1
+
+/*
+ * node_states
+ *
+ * Cache of recently accessed boottimes
+ */
+static hash_t node_states = NULL;
+
+/*
+ * node_states_nodenames
+ *
+ * Cache of nodenames used as keys for the node_states
+ */
+static List node_states_nodenames = NULL;
 
 /*
  * updown_event_setup
@@ -59,7 +77,35 @@
 static int
 updown_event_setup(void)
 {
+  if (!(node_states = hash_create(UPDOWN_HASH_SIZE,
+                                  (hash_key_f)hash_key_string,
+                                  (hash_cmp_f)strcmp,
+                                  (hash_del_f)free)))
+    {
+      CEREBRO_DBG(("hash_create: %s", strerror(errno)));
+      goto cleanup;
+    }
+  
+  if (!(node_states_nodenames = list_create((ListDelF)free)))
+    {
+      CEREBRO_DBG(("list_create: %s", strerror(errno)));
+      goto cleanup;
+    }
+
   return 0;
+
+ cleanup:
+  if (node_states)
+    {
+      hash_destroy(node_states);
+      node_states = NULL;
+    }
+  if (node_states_nodenames)
+    {
+      list_destroy(node_states_nodenames);
+      node_states_nodenames = NULL;
+    }
+  return -1;
 }
 
 /*
@@ -95,6 +141,90 @@ updown_event_timeout_length(void)
   return UPDOWN_EVENT_TIMEOUT_LENGTH;
 }
 
+/* 
+ * _create_entry
+ *
+ * Create an entry in the node_states hash
+ */
+static int *
+_create_entry(const char *nodename)
+{
+  char *nodePtr = NULL;
+  int *state = NULL;
+
+  if (!(state = (int *)malloc(sizeof(int))))
+    {
+      CEREBRO_DBG(("malloc: %s", strerror(errno)));
+      goto cleanup;
+    }
+  
+  if (!(nodePtr = (char *)malloc(CEREBRO_MAX_NODENAME_LEN + 1)))
+    {
+      CEREBRO_DBG(("malloc: %s", strerror(errno)));
+      goto cleanup;
+    }
+
+  strncpy(nodePtr, nodename, CEREBRO_MAX_NODENAME_LEN);
+  
+  if (!list_append(node_states_nodenames, nodePtr))
+    {
+      CEREBRO_DBG(("list_append: %s", strerror(errno)));
+      goto cleanup;
+    }
+
+  if (!hash_insert(node_states, nodePtr, state))
+    {
+      CEREBRO_DBG(("hash_insert: %s", strerror(errno)));
+      goto cleanup;
+    }
+
+  *state = UPDOWN_EVENT_STATE_INIT;
+  return state;
+
+ cleanup:
+  free(nodePtr);
+  free(state);
+  return NULL;
+}
+
+/* 
+ * _create_event
+ *
+ * Create an event
+ */
+static struct cerebro_event *
+_create_event(const char *nodename, int state)
+{
+  struct cerebro_event *event = NULL;
+
+  if (!(event = (struct cerebro_event *)malloc(sizeof(struct cerebro_event))))
+    {
+      CEREBRO_DBG(("malloc: %s", strerror(errno)));
+      goto cleanup;
+    }
+
+  event->version = CEREBRO_EVENT_PROTOCOL_VERSION;
+  strncpy(event->nodename, nodename, CEREBRO_MAX_NODENAME_LEN);
+  event->event_value_type = CEREBRO_METRIC_VALUE_TYPE_INT32;
+  event->event_value_size = sizeof(int32_t);
+  if (!(event->event_value = malloc(sizeof(int32_t))))
+    {
+      CEREBRO_DBG(("malloc: %s", strerror(errno)));
+      goto cleanup;
+    }
+  
+  *((int *)event->event_value) = state;
+
+ cleanup:
+  if (event)
+    {
+      if (event->event_value)
+        free(event->event_value);
+      free(event);
+    }
+  return NULL;
+}
+
 /*
  * updown_event_node_timeout
  *
@@ -102,9 +232,32 @@ updown_event_timeout_length(void)
  */
 static int
 updown_event_node_timeout(const char *nodename,
-                          struct cerebro_event *event)
+                          struct cerebro_event **event)
 {
-  return 0;
+  int *state = NULL;
+  int rv = 0;
+
+  /* If the node isn't recorded, it's the first notification
+   * that it's down.
+   */
+  if (!(state = hash_find(node_states, nodename)))
+    {
+      if (!(state = _create_entry(nodename)))
+        return -1;
+    }
+
+  if (*state == UPDOWN_EVENT_STATE_UP)
+    {
+      struct cerebro_event *eventPtr;
+      if ((eventPtr = _create_event(nodename, UPDOWN_EVENT_STATE_DOWN)))
+        {
+          *event = eventPtr;
+          rv = 1;
+        }
+    }
+  
+  *state = UPDOWN_EVENT_STATE_DOWN;
+  return rv;
 }
 
 /*
@@ -119,9 +272,32 @@ updown_event_metric_data(const char *nodename,
                          unsigned int metric_value_type,
                          unsigned int metric_value_len,
                          void *metric_value,
-                         struct cerebro_event *event)
+                         struct cerebro_event **event)
 {
-  return 0;
+  int *state = NULL;
+  int rv = 0;
+
+  /* If the node isn't recorded, it's the first notification
+   * that it's down.
+   */
+  if (!(state = hash_find(node_states, nodename)))
+    {
+      if (!(state = _create_entry(nodename)))
+        return -1;
+    }
+
+  if (*state == UPDOWN_EVENT_STATE_DOWN)
+    {
+      struct cerebro_event *eventPtr;
+      if ((eventPtr = _create_event(nodename, UPDOWN_EVENT_STATE_UP)))
+        {
+          *event = eventPtr;
+          rv = 1;
+        }
+    }
+  
+  *state = UPDOWN_EVENT_STATE_UP;
+  return rv;
 }
 
 #if WITH_STATIC_MODULES
