@@ -5,6 +5,10 @@
 	* src/libs/include/cerebro_event_protocol.h,
 	src/libs/include/cerebro_event_module.h: New files.
 
+	Add Updown Module Event support
+
+	* src/modules/event/cerebro_event_updown.c: New file.
+
 2006-10-05  Albert Chu  <chu11@llnl.gov>
 
 	* configure.ac: Fixed library versioning mistake.  Up revision,
